--- a/index.html
+++ b/index.html
@@ -209,3 +209,12 @@ Students improve focus, strategy and logic while tracking progress through an EL
 <button onclick="updateElo('win')">Win</button>
 <button onclick="updateElo('loss')">Lose</button>
 <button onclick="updateElo('draw')">Draw</button>
+<h3>Chess Skill Test</h3>
+
+<p>Q1: Chess board me kitne squares hote hain?</p>
+<button onclick="answerQuiz(true)">64</button>
+<button onclick="answerQuiz(false)">72</button>
+
+<p id="quizResult"></p>
+
+<h4>Level: <span id="chessLevel"></span></h4>
