--- a/index.html
+++ b/index.html
@@ -11,6 +11,9 @@
 <!-- Google Font -->
 <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600&display=swap" rel="stylesheet">
 
+<!-- Manifest -->
+<link rel="manifest" href="assets/manifest.json">
+
 <!-- CSS -->
 <style>
 *{margin:0;padding:0;box-sizing:border-box;font-family:'Poppins',sans-serif}
@@ -207,12 +210,6 @@ PRAGYANPATH
 Pragyanpath App offers structured chess learning for beginners to advanced players.
 Students improve focus, strategy and logic while tracking progress through an ELO rating system.
 </p>
-<ul>
-<li>• Beginner to Advanced Lessons</li>
-<li>• Practice vs AI</li>
-<li>• Daily Chess Puzzles</li>
-<li>• ELO based Skill Progress</li>
-</ul>
 
 <h4>Your Chess ELO: <span id="eloScore">800</span></h4>
 <button onclick="updateElo('win')">Win</button>
