--- a/index.html
+++ b/index.html
@@ -265,16 +265,11 @@ Students improve focus, strategy and logic while tracking progress through an EL
 <script src="assets/js/chess.js"></script>
 <script>
 // ===== Service Worker =====
-if ('serviceWorker' in navigator) {    
-  window.addEventListener('load', function() {    
-    navigator.serviceWorker.register('assets/js/sw.js')    
-    .then(function(registration) {    
-      console.log('ServiceWorker registered: ', registration);    
-    }).catch(function(error) {    
-      console.log('ServiceWorker registration failed: ', error);    
-    });    
-  });    
+  <script>
+if ("serviceWorker" in navigator) {
+  navigator.serviceWorker.register("/sw.js");
 }
+</script>  
 
 // ===== Install PWA Popup =====
 let deferredPrompt;
