--- a/index.html
+++ b/index.html
@@ -29,16 +29,16 @@
 
 <!-- ================= HERO SECTION ================= -->
 <section class="hero-section">
-  <h1>Pragyanpath – India Education Platform</h1>
+  <h1>India’s Smart Learning Path</h1>
   <p>
-    One platform for all Boards and Syllabus  
+    Board-wise education for Indian students  
     <br>
-    CBSE • UP Board • State Boards • NCERT • NEP  
+    CBSE • UP Board • NCERT • NEP  
     <br>
-    Class 1 to 12 | Old & New Syllabus
+    Class 1 to 12
   </p>
 
-  <button class="primary-btn">App Coming Soon</button>
+  <button class="primary-btn">Explore Pragyanpath</button>
 </section>
 
 <!-- ================= FEATURES ================= -->
