--- a/index.html
+++ b/index.html
@@ -3,102 +3,40 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>PragyanPath – Free AI Education Platform</title>
 
-  <!-- SEO -->
-  <meta name="description" content="PragyanPath is a free AI-powered education platform for students from Class 1 to 12. Learn smart, learn free." />
+  <title>PragyanPath – App Coming Soon</title>
 
-  <!-- CSS -->
+  <meta name="description" content="PragyanPath is a free AI-powered education app for students. App launching soon." />
+
   <link rel="stylesheet" href="assets/css/style.css" />
 </head>
 <body>
 
-  <!-- ================= NAVBAR ================= -->
+  <!-- ===== NAVBAR ===== -->
   <header class="navbar">
     <div class="logo">PragyanPath</div>
-    <nav>
-      <a href="#classes">Classes</a>
-      <a href="#features">Features</a>
-      <a href="about.html">About</a>
-      <a href="contact.html">Contact</a>
-    </nav>
-    <a class="btn-primary" href="#start">Start Learning</a>
   </header>
 
-  <!-- ================= HERO ================= -->
+  <!-- ===== HERO ===== -->
   <section class="hero">
-    <div class="hero-text">
-      <h1>Free AI Education for Every Student</h1>
-      <p>
-        Class 1 to 12 • Smart Learning • Simple Language • 100% Free
-      </p>
-      <a class="btn-primary" href="#classes">Explore Classes</a>
-      <a class="btn-secondary" href="#features">How it Works</a>
+    <h1>PragyanPath</h1>
+    <p class="tagline">
+      Free AI-Powered Education App for Students
+    </p>
+
+    <div class="coming-soon">
+      🚀 <span>APP COMING SOON</span>
     </div>
-    <div class="hero-image">
-      <img src="assets/images/hero.png" alt="AI Education" />
-    </div>
+
+    <p class="subtext">
+      Class 1 to 12 • All Boards • Simple Language
+    </p>
   </section>
 
-  <!-- ================= WHY US ================= -->
-  <section class="why-us">
-    <h2>Why PragyanPath?</h2>
-    <div class="cards">
-      <div class="card">📘 Simple Language</div>
-      <div class="card">🤖 AI Powered Learning</div>
-      <div class="card">🎓 For All Boards</div>
-      <div class="card">💯 Completely Free</div>
-    </div>
-  </section>
-
-  <!-- ================= CLASSES ================= -->
-  <section id="classes" class="classes">
-    <h2>Choose Your Class</h2>
-    <div class="class-grid">
-      <div class="class-card">Class 1 – 5</div>
-      <div class="class-card">Class 6 – 8</div>
-      <div class="class-card">Class 9 – 10</div>
-      <div class="class-card">Class 11 – 12</div>
-    </div>
-  </section>
-
-  <!-- ================= FEATURES ================= -->
-  <section id="features" class="features">
-    <h2>Smart Learning Features</h2>
-    <ul>
-      <li>✔ AI Generated Notes</li>
-      <li>✔ Board-wise Content</li>
-      <li>✔ Concept + Skills</li>
-      <li>✔ Mobile Friendly</li>
-    </ul>
-  </section>
-
-  <!-- ================= HOW IT WORKS ================= -->
-  <section class="how-it-works">
-    <h2>How It Works</h2>
-    <div class="steps">
-      <div>1️⃣ Choose Class</div>
-      <div>2️⃣ Select Subject</div>
-      <div>3️⃣ Learn with AI</div>
-    </div>
-  </section>
-
-  <!-- ================= CTA ================= -->
-  <section id="start" class="cta">
-    <h2>Start Your Learning Journey Today</h2>
-    <a class="btn-primary" href="#">Get Started Free</a>
-  </section>
-
-  <!-- ================= FOOTER ================= -->
+  <!-- ===== FOOTER ===== -->
   <footer class="footer">
-    <p>© 2026 PragyanPath. All Rights Reserved.</p>
-    <div class="footer-links">
-      <a href="privacy.html">Privacy</a>
-      <a href="terms.html">Terms</a>
-    </div>
+    <p>© 2026 PragyanPath. All rights reserved.</p>
   </footer>
 
-  <!-- JS -->
-  <script src="assets/js/main.js"></script>
 </body>
 </html>
