--- a/index.html
+++ b/index.html
@@ -1,42 +1,32 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>PragyanPath – App Coming Soon</title>
-
-  <meta name="description" content="PragyanPath is a free AI-powered education app for students. App launching soon." />
-
-  <link rel="stylesheet" href="assets/css/style.css" />
+  <meta name="description" content="PragyanPath is a free AI-powered education app for students from Class 1 to 12. App launching soon.">
+  <link rel="stylesheet" href="assets/css/style.css">
 </head>
 <body>
-
-  <!-- ===== NAVBAR ===== -->
   <header class="navbar">
     <div class="logo">PragyanPath</div>
   </header>
 
-  <!-- ===== HERO ===== -->
   <section class="hero">
     <h1>PragyanPath</h1>
-    <p class="tagline">
-      Free AI-Powered Education App for Students
-    </p>
-
+    <p class="tagline">Free AI-Powered Education App for Students (Class 1 – 12)</p>
     <div class="coming-soon">
       🚀 <span>APP COMING SOON</span>
     </div>
-
-    <p class="subtext">
-      Class 1 to 12 • All Boards • Simple Language
-    </p>
+    <p class="subtext">All Boards • Simple Language • Smart Learning</p>
   </section>
 
-  <!-- ===== FOOTER ===== -->
   <footer class="footer">
-    <p>© 2026 PragyanPath. All rights reserved.</p>
+    <a href="privacy-policy.html">Privacy Policy</a> |
+    <a href="terms.html">Terms & Conditions</a> |
+    <a href="about.html">About</a> |
+    <a href="contact.html">Contact</a>
+    <p>© 2026 PragyanPath</p>
   </footer>
-
 </body>
 </html>
