--- a/privacy.html
+++ b/privacy.html
@@ -1,23 +1,39 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<meta charset="UTF-8">
-<title>Privacy Policy - Vishal Learning</title>
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
-<style>
-body{font-family:Arial,sans-serif;margin:20px;line-height:1.6;background:#f4f6f8}
-h1{color:#0a58ca}
-p{margin-bottom:10px}
-a{color:#0a58ca;text-decoration:none}
-</style>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Privacy Policy - PragyanPath</title>
+  <link rel="stylesheet" href="assets/css/style.css">
 </head>
 <body>
-<h1>Privacy Policy</h1>
-<p>We respect your privacy and are committed to protecting your personal information.</p>
-<p>We do not collect or share personal data with third parties. Any information you provide (e.g., email for contact) is used only to respond to your inquiries.</p>
-<p>We may use cookies or analytics to improve website performance, but they do not identify individual users.</p>
-<p>By using this website, you agree to our Privacy Policy. We may update it from time to time; please review periodically.</p>
-<p>For questions, contact us at <a href="mailto:contact@vishallearning.com">contact@vishallearning.com</a>.</p>
-<p><a href="index.html">Back to Homepage</a></p>
+  <header class="navbar">
+    <div class="logo">PragyanPath</div>
+  </header>
+
+  <main class="content">
+    <h1>Privacy Policy</h1>
+    <p>PragyanPath respects your privacy. We do not collect any personal data from users.</p>
+
+    <h2>Information Collection</h2>
+    <p>We may use Firebase Analytics for performance tracking, but all data is anonymous.</p>
+
+    <h2>Third-Party Services</h2>
+    <p>Our app may integrate with third-party services like Google Analytics and Gemini AI for better learning experience.</p>
+
+    <h2>Children’s Privacy</h2>
+    <p>We do not knowingly collect data from children under 13 years.</p>
+
+    <h2>Contact</h2>
+    <p>Email: support@pragyanpath.com</p>
+  </main>
+
+  <footer class="footer">
+    <a href="index.html">Home</a> |
+    <a href="terms.html">Terms & Conditions</a> |
+    <a href="about.html">About</a> |
+    <a href="contact.html">Contact</a>
+    <p>© 2026 PragyanPath</p>
+  </footer>
 </body>
 </html>
